mv notebooks. rerun

--- a/notebooks/tutorial/s4a_pathway_subpathways.ipynb
+++ b/notebooks/tutorial/s4a_pathway_subpathways.ipynb
@@ -14,11 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Link to Reactome Knowledgebase loaded into Neo4j\n",
     "from neo4j import GraphDatabase\n",
     "\n",
     "neo4j_url = 'bolt://localhost:7687'\n",
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,34 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Pathway      | SubPathway ID | SubPathway Name\n",
-      "-----------------|---------------|----------------\n",
-      "    R-HSA-983169 | R-HSA-983168  | Antigen processing: Ubiquitination & Proteasome degradation\n",
-      "    R-HSA-983169 | R-HSA-1236975 | Antigen processing-Cross presentation\n",
-      "    R-HSA-983169 | R-HSA-983170  | Antigen Presentation: Folding, assembly and peptide loading of class I MHC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print sub-pathways under R-HSA-983169\n",
     "print('    Pathway      | SubPathway ID | SubPathway Name')\n",
     "print('-----------------|---------------|----------------')\n",
-    "for data in _get_data():\n",
-    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**data))\n"
+    "for record in _get_data():\n",
+    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**record))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright (C) 2018-2019, DV Klopfenstein. All rights reserved."
+    "Copyright (C) 2018-present, DV Klopfenstein. All rights reserved."
    ]
   }
  ],
@@ -110,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
