--- a/notebooks/tutorial/s4b_pathway_superpathways.ipynb
+++ b/notebooks/tutorial/s4b_pathway_superpathways.ipynb
@@ -14,11 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Link to Reactome Knowledgebase loaded into Neo4j\n",
     "from neo4j import GraphDatabase\n",
     "\n",
     "neo4j_url = 'bolt://localhost:7687'\n",
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +57,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2b) Print Immediate Superpathways"
+    "## Step 2b) Print Immediate Superpathways\n",
+    "### Print sub-pathways under R-HSA-983169"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,6 @@
     }
    ],
    "source": [
-    "# Print sub-pathways under R-HSA-983169\n",
     "print('    Pathway      | SuperPathway ID | SuperPathway Name')\n",
     "print('-----------------|-----------------|----------------')\n",
     "for data in _get_data():\n",
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright (C) 2018-2019, DV Klopfenstein. All rights reserved."
+    "Copyright (C) 2018-present, DV Klopfenstein. All rights reserved."
    ]
   }
  ],
@@ -165,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
