--- a/notebooks/tutorial/fig4b_2018_ccr5_pathways.ipynb
+++ b/notebooks/tutorial/fig4b_2018_ccr5_pathways.ipynb
@@ -14,11 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Link to Reactome Knowledgebase loaded into Neo4j\n",
     "from neo4j import GraphDatabase\n",
     "\n",
     "neo4j_url = 'bolt://localhost:7687'\n",
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,18 +62,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3) Print Data"
+    "## Step 3) Print sub-pathways under R-HSA-983169"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "18 sub-pathways found\n",
+      "\n",
       " ID           | Pathway Name\n",
       "--------------|----------------------\n",
       "R-HSA-1280215 | Cytokine Signaling in Immune system\n",
@@ -99,18 +100,18 @@
     }
    ],
    "source": [
-    "# Print sub-pathways under R-HSA-983169\n",
+    "print('{N} sub-pathways found:\\n'.format(N=len(data)))\n",
     "print(' ID           | Pathway Name')\n",
     "print('--------------|----------------------')\n",
-    "for data in sorted(data, key=lambda r:r['Identifier']):\n",
-    "    print(\"{Identifier:13} | {Pathway}\".format(**data))"
+    "for record in sorted(data, key=lambda r:r['Identifier']):\n",
+    "    print(\"{Identifier:13} | {Pathway}\".format(**record))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright (C) 2018-2019, DV Klopfenstein. All rights reserved."
+    "Copyright (C) 2018-present, DV Klopfenstein. All rights reserved."
    ]
   }
  ],
@@ -130,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
