--- a/notebooks/tutorial/s1a_get_pathway.ipynb
+++ b/notebooks/tutorial/s1a_get_pathway.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 2a) Retrieve identifiers for a protein.\n",
-    "Get the ID and name of the PTEN protein in the cytosol with identifier R-HSA-199420\n",
+    "# Tutorial 1a) Retrieve a Pathway based on its identifier\n",
+    "Get the Pathway **\"Antigen processing-Cross presentation\"** with identifier **R-HSA-1236975**\n",
     "\n",
-    "[**Reactome Tutorial**: Retrieving identifiers for proteins or chemicals](https://reactome.org/dev/graph-database/extract-participating-molecules#identifiers-proteins-or-chemicals)\n",
+    "[**Reactome Tutorial**: Retrieving a pathway object](https://reactome.org/dev/graph-database/extract-participating-molecules#retrieving-objects)\n",
     "\n",
     "## Step 1) [Connect to Neo4j loaded with the Reactome Knowledgebase](https://github.com/dvklopfenstein/reactome_neo4j_py/blob/master/doc/md/README_gdbdr.md)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "neo4j_usr = 'neo4j'\n",
     "neo4j_password = 'myneo4j_password'\n",
     "\n",
-    "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, neo4j_password))"
+    "gdbdr = GraphDatabase.driver(neo4j_url, auth=(neo4j_usr, neo4j_password)) "
    ]
   },
   {
@@ -32,38 +32,47 @@
    "metadata": {},
    "source": [
     " ## Step 2) Query\n",
-    " ###  Get the ID and name of the PTEN protein in the cytosol with identifier R-HSA-199420\n",
-    " An _EntityWithAccessionedSequence_ corresponds to a protein in Reactome"
+    " ### Get the Pathway _Antigen processing-Cross presentation_ with identifier **R-HSA-1236975**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    P60484      PTEN [cytosol]\n"
+      "    schemaClass Pathway\n",
+      "    speciesName Homo sapiens\n",
+      "    oldStId     REACT_111119\n",
+      "    isInDisease False\n",
+      "    releaseDate 2011-09-20\n",
+      "    displayName Antigen processing-Cross presentation\n",
+      "    stIdVersion R-HSA-1236975.1\n",
+      "    dbId        1236975\n",
+      "    name        ['Antigen processing-Cross presentation']\n",
+      "    stId        R-HSA-1236975\n",
+      "    hasDiagram  False\n",
+      "    isInferred  False\n"
      ]
     }
    ],
    "source": [
-    "query = ('MATCH (ewas:EntityWithAccessionedSequence{stId:\"R-HSA-199420\"}), '\n",
-    "         '(ewas)-[:referenceEntity]->(re:ReferenceEntity) '\n",
-    "         'RETURN ewas.displayName AS Name, re.identifier AS ID')\n",
+    "query = 'MATCH (pathway:Pathway{stId:\"R-HSA-1236975\"}) RETURN pathway'\n",
     "\n",
     "with gdbdr.session() as session:\n",
     "    for rec in session.run(query).records():\n",
-    "        print(\"    {ID:11} {Name}\".format(**rec))"
+    "        for key, val in rec['pathway'].items():\n",
+    "            print(\"    {KEY:11} {VAL}\".format(KEY=key, VAL=val))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright (C) 2018-2019, DV Klopfenstein. All rights reserved."
+    "Copyright (C) 2018-present, DV Klopfenstein. All rights reserved."
    ]
   }
  ],
@@ -83,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
