--- a/notebooks/tutorial/s6a_reaction_participants.ipynb
+++ b/notebooks/tutorial/s6a_reaction_participants.ipynb
@@ -14,11 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Link to Reactome Knowledgebase loaded into Neo4j\n",
     "from neo4j import GraphDatabase\n",
     "\n",
     "neo4j_url = 'bolt://localhost:7687'\n",
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,15 +84,15 @@
     "# Print the first level participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23\n",
     "print('     Reaction | Participant   | Participant Name')\n",
     "print('--------------|---------------|----------------')\n",
-    "for data in sorted(_get_data(), key=lambda r: r['Participant']):\n",
-    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**data))"
+    "for record in sorted(_get_data(), key=lambda r: r['Participant']):\n",
+    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**record))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright (C) 2018-2019, DV Klopfenstein. All rights reserved."
+    "Copyright (C) 2018-present, DV Klopfenstein. All rights reserved."
    ]
   }
  ],
@@ -113,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
