--- a/notebooks/tutorial/s6b_reaction_participants.ipynb
+++ b/notebooks/tutorial/s6b_reaction_participants.ipynb
@@ -18,7 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Link to Reactome Knowledgebase loaded into Neo4j\n",
     "from neo4j import GraphDatabase\n",
     "\n",
     "neo4j_url = 'bolt://localhost:7687'\n",
@@ -124,15 +123,15 @@
     "# Print all the participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23\n",
     "print('     Reaction | Participant   | Participant Name')\n",
     "print('--------------|---------------|----------------')\n",
-    "for data in sorted(_get_data(), key=lambda r: [r['Participant'][:5], r['DisplayName']]):\n",
-    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**data))"
+    "for record in sorted(_get_data(), key=lambda r: [r['Participant'][:5], r['DisplayName']]):\n",
+    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**record))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright (C) 2018-2019, DV Klopfenstein. All rights reserved."
+    "Copyright (C) 2018-present, DV Klopfenstein. All rights reserved."
    ]
   }
  ],
@@ -152,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
