--- a/notebooks/tutorial/s7a_pathway_molecules.ipynb
+++ b/notebooks/tutorial/s7a_pathway_molecules.ipynb
@@ -18,7 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Link to Reactome Knowledgebase loaded into Neo4j\n",
     "from neo4j import GraphDatabase\n",
     "\n",
     "neo4j_url = 'bolt://localhost:7687'\n",
@@ -1072,15 +1071,15 @@
     "# Print  all the molecules in the pathway, R-HSA-983169, Class I MHC mediated antigen processing & presentation\n",
     "print('Database| ID     | Name')\n",
     "print('--------|--------|------')\n",
-    "for data in sorted(data, key=lambda r:[r['Database'], r['Name']]):\n",
-    "    print(\"{Database:8}| {Identifier:6} | {Name}\".format(**data))"
+    "for record in sorted(data, key=lambda r:[r['Database'], r['Name']]):\n",
+    "    print(\"{Database:8}| {Identifier:6} | {Name}\".format(**record))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright (C) 2018-2019, DV Klopfenstein. All rights reserved."
+    "Copyright (C) 2018-present, DV Klopfenstein. All rights reserved."
    ]
   }
  ],
@@ -1100,7 +1099,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
