--- a/notebooks/tutorial/fig4a_2018_molecules_in_interleukin_signaling.ipynb
+++ b/notebooks/tutorial/fig4a_2018_molecules_in_interleukin_signaling.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "# Query and get the sub-pathways under R-HSA-983169\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
+    "        return session.run(query).data()\n",
     "\n",
     "data = _get_data()"
    ]
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "223 molecules participate in \"Interleukin-4 and 13 signaling\":\n",
+      "228 molecules participate in \"Interleukin-4 and 13 signaling\":\n",
       "\n",
       "Database| ID              | Name\n",
       "--------|-----------------|--------------------------\n",
@@ -181,6 +181,11 @@
       "ENSEMBL | ENSG00000112715 | VEGFA gene [nucleoplasm]\n",
       "ENSEMBL | ENSG00000026025 | VIM gene [nucleoplasm]\n",
       "ENSEMBL | ENSG00000148516 | ZEB1 gene [nucleoplasm]\n",
+      "Guide to Pharmacology| 8912            | acalabrutinib [cytosol]\n",
+      "Guide to Pharmacology| 7792            | baricitinib [cytosol]\n",
+      "Guide to Pharmacology| 6912            | ibrutinib [cytosol]\n",
+      "Guide to Pharmacology| 5688            | ruxolitinib [cytosol]\n",
+      "Guide to Pharmacology| 5677            | tofacitinib [cytosol]\n",
       "UniProt | P16671          | 4xPalmC-CD36 [plasma membrane]\n",
       "UniProt | P31749          | AKT1 [cytosol]\n",
       "UniProt | P16050          | ALOX15 [cytosol]\n",
