--- a/notebooks/tutorial/fig4b_2018_ccr5_pathways.ipynb
+++ b/notebooks/tutorial/fig4b_2018_ccr5_pathways.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "# Query and get the sub-pathways under R-HSA-983169\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
+    "        return session.run(query).data()\n",
     "\n",
     "data = _get_data()"
    ]
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18 sub-pathways found\n",
+      "18 sub-pathways found:\n",
       "\n",
       " ID           | Pathway Name\n",
       "--------------|----------------------\n",
