--- a/notebooks/tutorial/s1a_get_pathway.ipynb
+++ b/notebooks/tutorial/s1a_get_pathway.ipynb
@@ -45,15 +45,15 @@
      "output_type": "stream",
      "text": [
       "    schemaClass Pathway\n",
-      "    speciesName Homo sapiens\n",
       "    oldStId     REACT_111119\n",
       "    isInDisease False\n",
       "    releaseDate 2011-09-20\n",
       "    displayName Antigen processing-Cross presentation\n",
+      "    stId        R-HSA-1236975\n",
+      "    speciesName Homo sapiens\n",
       "    stIdVersion R-HSA-1236975.1\n",
       "    dbId        1236975\n",
       "    name        ['Antigen processing-Cross presentation']\n",
-      "    stId        R-HSA-1236975\n",
       "    hasDiagram  False\n",
       "    isInferred  False\n"
      ]
@@ -63,7 +63,7 @@
     "query = 'MATCH (pathway:Pathway{stId:\"R-HSA-1236975\"}) RETURN pathway'\n",
     "\n",
     "with gdbdr.session() as session:\n",
-    "    for rec in session.run(query).records():\n",
+    "    for rec in session.run(query).data():\n",
     "        for key, val in rec['pathway'].items():\n",
     "            print(\"    {KEY:11} {VAL}\".format(KEY=key, VAL=val))"
    ]
