--- a/notebooks/tutorial/s4b_pathway_superpathways.ipynb
+++ b/notebooks/tutorial/s4b_pathway_superpathways.ipynb
@@ -50,7 +50,7 @@
     "# Query and get the sub-pathways under R-HSA-983169\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]"
+    "        return session.run(query).data()"
    ]
   },
   {
@@ -106,7 +106,7 @@
     "# Query and get the sub-pathways under R-HSA-983169\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]"
+    "        return session.run(query).data()"
    ]
   },
   {
