--- a/notebooks/tutorial/s6a_reaction_participants.ipynb
+++ b/notebooks/tutorial/s6a_reaction_participants.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "# Query the first level participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]"
+    "        return session.run(query).data()"
    ]
   },
   {
@@ -84,8 +84,8 @@
     "# Print the first level participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23\n",
     "print('     Reaction | Participant   | Participant Name')\n",
     "print('--------------|---------------|----------------')\n",
-    "for record in sorted(_get_data(), key=lambda r: r['Participant']):\n",
-    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**record))"
+    "for dct in sorted(_get_data(), key=lambda r: r['Participant']):\n",
+    "    print(\"{Reaction} | {Participant:13} | {DisplayName}\".format(**dct))"
    ]
   },
   {
