--- a/notebooks/tutorial/s6b_reaction_participants.ipynb
+++ b/notebooks/tutorial/s6b_reaction_participants.ipynb
@@ -51,7 +51,7 @@
     "# Query all the participants in the reaction, R-HSA-8863895, IKKB phosphorylates SNAP23?\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]"
+    "        return session.run(query).data()"
    ]
   },
   {
