--- a/notebooks/tutorial/s4a_pathway_subpathways.ipynb
+++ b/notebooks/tutorial/s4a_pathway_subpathways.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "# Query and get the sub-pathways under R-HSA-983169\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]"
+    "        return session.run(query).data()"
    ]
   },
   {
@@ -69,8 +69,8 @@
     "# Print sub-pathways under R-HSA-983169\n",
     "print('    Pathway      | SubPathway ID | SubPathway Name')\n",
     "print('-----------------|---------------|----------------')\n",
-    "for record in _get_data():\n",
-    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**record))\n"
+    "for dct in _get_data():\n",
+    "    print(\"    {Pathway} | {SubPathway_ID:13} | {SubPathway_Name}\".format(**dct))\n"
    ]
   },
   {
