--- a/notebooks/tutorial/s7a_pathway_molecules.ipynb
+++ b/notebooks/tutorial/s7a_pathway_molecules.ipynb
@@ -56,7 +56,7 @@
     "# Query and get the sub-pathways under R-HSA-983169\n",
     "def _get_data():\n",
     "    with gdbdr.session() as session:\n",
-    "        return [rec.data() for rec in session.run(query).records()]\n",
+    "        return session.run(query).data()\n",
     "\n",
     "data = _get_data()"
    ]
@@ -1071,8 +1071,8 @@
     "# Print  all the molecules in the pathway, R-HSA-983169, Class I MHC mediated antigen processing & presentation\n",
     "print('Database| ID     | Name')\n",
     "print('--------|--------|------')\n",
-    "for record in sorted(data, key=lambda r:[r['Database'], r['Name']]):\n",
-    "    print(\"{Database:8}| {Identifier:6} | {Name}\".format(**record))"
+    "for data in sorted(data, key=lambda r:[r['Database'], r['Name']]):\n",
+    "    print(\"{Database:8}| {Identifier:6} | {Name}\".format(**data))"
    ]
   },
   {
